--- a/NewShop.Web/Views/Contact/Index.cshtml
+++ b/NewShop.Web/Views/Contact/Index.cshtml
@@ -2,18 +2,15 @@
 @using BotDetect.Web.Mvc;
 @{
     ViewBag.Title = "Liên hệ";
-    ViewBag.MetaKeyword = "liên hệ";
-    ViewBag.MetaDescription = "Thông tin liên hệ của NEW SHOP";
-
     Layout = "~/Views/Shared/Layouts.cshtml";
 }
 @section footerJS{
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAk3Eeu6MXm1Y6qil2hO6j89kckY5nnSTo"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQJ4uWNMAd09cL-g3tm2dtw5tAbHl1W64"></script>
     <script src="~/Assets/client/js/controllers/contact.js"></script>
 }
 <style>
     #map {
-        height: 100%;
+        height: 600px;
     }
 </style>
 <link href="@BotDetect.Web.CaptchaUrls.Absolute.LayoutStyleSheetUrl" rel="stylesheet" type="text/css" />
