Thống kê lượt viensg thăm của khách và số người online Fix lỗi phân quyền

--- a/NewShop.Web/Views/Shared/Header.cshtml
+++ b/NewShop.Web/Views/Shared/Header.cshtml
@@ -5,38 +5,28 @@
             <div class="top-header-left">
                 <ul class="support">
                     <li><a href="#"><label> </label></a></li>
-                    <li><a href="#">24x7 live<span class="live"> support</span></a></li>
+                    <li><a href="#">Visit<span class="live">  @ViewBag.SoNguoiTruyCap</span></a></li>
                 </ul>
                 <ul class="support">
                     <li class="van"><a href="#"><label> </label></a></li>
-                    <li><a href="#">Free shipping <span class="live">on order over 500</span></a></li>
+                    <li><a href="#">Online<span class="live">  @ViewBag.SoLuongNguoiOnLine</span></a></li>
                 </ul>
-                <ul class="support">
-                    <li><a href="#"><label> </label></a></li>
-                    <li><a href="/gioi-thieu.html">Giới thiệu</a></li>
-                </ul>
-                <ul class="support">
-                    <li><a href="#"><label> </label></a></li>
-                    <li><a href="/lien-he.html">Liên hệ</a></li>
-                </ul>
+                
+                
                 <div class="clearfix"> </div>
             </div>
             <div class="top-header-right">
                 <div class="down-top">
-                    <select class="in-drop">
-                        <option value="English" class="in-of">English</option>
-                        <option value="Japanese" class="in-of">Japanese</option>
-                        <option value="French" class="in-of">French</option>
-                        <option value="German" class="in-of">German</option>
-                    </select>
+                    <ul class="support">
+                        <li><a href="#"><label> </label></a></li>
+                        <li><a href="/gioi-thieu.html">Giới thiệu</a></li>
+                    </ul>
                 </div>
                 <div class="down-top top-down">
-                    <select class="in-drop">
-
-                        <option value="Dollar" class="in-of">Dollar</option>
-                        <option value="Yen" class="in-of">Yen</option>
-                        <option value="Euro" class="in-of">Euro</option>
-                    </select>
+                    <ul class="support">
+                        <li><a href="#"><label> </label></a></li>
+                        <li><a href="/lien-he.html">Liên hệ</a></li>
+                    </ul>
                 </div>
                 <!---->
                 <div class="clearfix"> </div>
@@ -48,7 +38,7 @@
         <div class="container">
             <div class="header-bottom-left">
                 <div class="logo">
-                    <a href="index.html"><img src="/Assets/client/images/logo.png" alt=" " /></a>
+                    <a href="/"><img src="/Assets/client/images/logo.png" alt=" " /></a>
                 </div>
                 <div class="search">
                     <form method="get" action="/tim-kiem.html">
